# sondia

./: README.md
.github/workflows/: azure-static-web-apps-yellow-flower-00847860f.yml
chatbot-ollama/: Dockerfile  README.md  docker-compose.yml
chatbot-ollama/components/Chat/: Chat.tsx  ChatInput.tsx
chatbot-ollama/pages/api/: chat.ts
chatbot-ollama/pages/api/home/: home.tsx
chatbot-ollama/public/locales/ar/: chat.json
chatbot-ollama/public/locales/bn/: chat.json
chatbot-ollama/public/locales/de/: chat.json
chatbot-ollama/public/locales/fi/: chat.json
chatbot-ollama/public/locales/id/: chat.json
chatbot-ollama/public/locales/it/: chat.json
chatbot-ollama/public/locales/ja/: chat.json
chatbot-ollama/public/locales/ko/: chat.json
chatbot-ollama/public/locales/pl/: chat.json
chatbot-ollama/public/locales/pt/: chat.json
chatbot-ollama/public/locales/ru/: chat.json
chatbot-ollama/public/locales/vi/: chat.json
chatbot-ollama/utils/app/: const.ts
chatbot-ollama/utils/server/: index.ts
frontend/: CONTRIBUTING.md
frontend/components/Chat/: Chat.tsx
frontend/pages/: _app.tsx  _document.tsx
frontend/pages/api/: chat.ts  modeldetails.ts  models.ts
frontend/pages/api/home/: home.tsx
frontend/public/locales/ca/: chat.json
frontend/public/locales/es/: chat.json
frontend/types/: chat.ts
frontend/utils/app/: const.ts
frontend/utils/server/: index.ts
sondia/: .env  calculadora.py  config.py  example_response.json  main.py  model_instructions.md  pyproject.toml  sharepoint-searchai.py  streamlit-demo.py
(+8 files in other folders)
